<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".login">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:paddingTop="4dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name"
            app:fontFamily="sans-serif">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/imgUser"
        android:src="@drawable/user_logo"
        android:background="@color/colorBackground"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/txtId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgUser"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:textSize="22sp"
        app:fontFamily="sans-serif"
        android:inputType="textPersonName"
        android:hint="@string/id_hint"
        android:background="@drawable/border"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="22sp"
        app:fontFamily="sans-serif" />

    <EditText
        android:id="@+id/txtIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:ems="10"
        android:text="@string/def_ip"
        android:singleLine="true"
        android:textSize="22sp"
        app:fontFamily="sans-serif"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtIp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:textSize="22sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:fontFamily="sans-serif"
        android:text="@string/login"
        android:background="@color/colorLightBlue"/>

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/no_driver_id_password"
        android:textColor="@color/colorStatus"
        android:visibility="invisible"
        app:fontFamily="sans-serif"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>